src/test/deca/syntax/invalid/sansobjet/IntMult.deca
// 
// Description: test produit incorrecte
// Resultat: erreur ligne 5: pas de deuxieme terme
{
    int i = 1*;
}
